--- a/TFAED01/TFAED01/TFAED01.vcxproj.filters
+++ b/TFAED01/TFAED01/TFAED01.vcxproj.filters
@@ -38,6 +38,12 @@
     <ClInclude Include="CTabla.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="Filtros.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="CArbol.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="FormPopUp.resx">
