--- a/TFAED01/TFAED01/TFAED01.vcxproj.filters
+++ b/TFAED01/TFAED01/TFAED01.vcxproj.filters
@@ -32,16 +32,16 @@
     <ClInclude Include="CCols.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
-    <ClInclude Include="HeapSort.h">
-      <Filter>Archivos de encabezado</Filter>
-    </ClInclude>
     <ClInclude Include="CTabla.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
-    <ClInclude Include="Filtros.h">
+    <ClInclude Include="CArbol.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
-    <ClInclude Include="CArbol.h">
+    <ClInclude Include="Funciones.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="CSVRow.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
